Fait chier je voulais faire un tinder des  voitures mais l'objet tuiles de streamlit il peut pas etre drag and drop :'(

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,5 +15,6 @@ dependencies = [
     "scikit-learn>=1.8.0",
     "selenium>=4.38.0",
     "streamlit>=1.52.2",
+    "streamlit-tile>=4.1.0",
     "xgboost>=3.1.3",
 ]
