--- a/.github/workflows/AutoScrapping.yml
+++ b/.github/workflows/AutoScrapping.yml
@@ -6,6 +6,9 @@ on:
     - cron: '0 3 * * *'
   workflow_dispatch:  # Permet de lancer manuellement le workflow
 
+permissions:
+  contents: write
+
 jobs:
   scrape:
     runs-on: ubuntu-latest
