--- a/.github/workflows/AutoScrapping.yml
+++ b/.github/workflows/AutoScrapping.yml
@@ -2,8 +2,9 @@ name: Auto Scraping AutoScout24
 
 on:
   schedule:
-    # Exécution 4 fois par jour, toutes les 6 heures (UTC)
-    - cron: '0 0,6,12,18 * * *'
+    - cron: '15 3 * * *'    # 3h15
+    - cron: '45 11 * * *'   # 11h45
+    - cron: '30 19 * * *'   # 19h30
   workflow_dispatch:  # Permet de lancer manuellement le workflow
 
 permissions:
