--- a/.github/workflows/AutoScrapping.yml
+++ b/.github/workflows/AutoScrapping.yml
@@ -48,6 +48,7 @@ jobs:
         git config --local user.name "github-actions[bot]"
         git add annonces_autoscout24.json
         git diff --staged --quiet || git commit -m "🤖 Auto-scraping: Mise à jour des annonces [$(date '+%Y-%m-%d %H:%M:%S')]"
+        git pull --rebase origin main
         git push
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
