--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ dependencies = [
     "bs4>=0.0.2",
     "fastexcel>=0.18.0",
     "lxml>=6.0.2",
+    "openpyxl>=3.1.5",
     "plotly>=6.5.1",
     "polars>=1.36.1",
     "pydantic>=2.12.3",
