--- a/.github/workflows/AutoScrapping.yml
+++ b/.github/workflows/AutoScrapping.yml
@@ -46,7 +46,7 @@ jobs:
       run: |
         git config --local user.email "github-actions[bot]@users.noreply.github.com"
         git config --local user.name "github-actions[bot]"
-        git add annonces_autoscout24.json
+        git add data/raw/annonces_autoscout24.json
         git diff --staged --quiet || git commit -m "🤖 Auto-scraping: Mise à jour des annonces [$(date '+%Y-%m-%d %H:%M:%S')]"
         git pull --rebase origin main
         git push
