--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ dependencies = [
     "polars>=1.36.1",
     "pydantic>=2.12.3",
     "requests>=2.32.5",
+    "ruff>=0.14.13",
     "scikit-learn>=1.8.0",
     "seaborn>=0.13.2",
     "selenium>=4.38.0",
