--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,7 @@ readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
     "bs4>=0.0.2",
+    "coverage>=7.13.1",
     "fastexcel>=0.18.0",
     "lxml>=6.0.2",
     "matplotlib>=3.10.8",
@@ -13,6 +14,7 @@ dependencies = [
     "plotly>=6.5.1",
     "polars>=1.36.1",
     "pydantic>=2.12.3",
+    "pytest>=9.0.2",
     "requests>=2.32.5",
     "ruff>=0.14.13",
     "scikit-learn>=1.8.0",
@@ -21,4 +23,9 @@ dependencies = [
     "streamlit>=1.52.2",
     "streamlit-tile>=4.1.0",
     "xgboost>=3.1.3",
+]
+
+[dependency-groups]
+dev = [
+    "pytest-cov>=7.0.0",
 ]
