--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ dependencies = [
     "plotly>=6.5.1",
     "polars>=1.36.1",
     "pydantic>=2.12.3",
+    "pyinstrument>=5.1.2",
     "pytest>=9.0.2",
     "requests>=2.32.5",
     "ruff>=0.14.13",
